oh god oh god oh god oh fuck oh fuck oh fuck oh fuck

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
-robot-soccer-kit
+### Robot Control Kit
+#robot-soccer-kit
+
+### Midi Handler
 mido
 python-rtmidi
+
+### Enums
 aenum
+
+### Formatter
+autopep8
